# llm-exec-core

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/design_docs/: openai_compat_request_options.md
src/llm_exec_core/: __init__.py  client.py  config.py  constants.py  llm_config.yml  tokens.py  types.py  usage.py
tests/unit/: test_client_legacy.py  test_client_request_options.py  test_client_result.py  test_client_streaming.py  test_config.py  test_tokens.py  test_types.py  test_usage.py
