[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-exec-core"
version = "0.1.0"
description = "Provider-agnostic async LLM execution core with a shared model catalog."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [{ name = "mogu" }]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-PyYAML",
]

[tool.black]
line-length = 79

[tool.setuptools]
package-data = { "llm_exec_core" = ["*.yml", "py.typed"] }
